--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <html>
 	<head>		
-		<title> Hello </title>
+		<title> SET08101 - Headings </title>
 	</head>
 	<body>
-		<h1> hello world </h1>
+		<h1> A very important heading </h1>
+		<img src =" https :// raw . githubusercontent . com / siwells / set08101 / master /resources / vmask .jpg " />
 	</body>
-
 </html>
