--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 
 <html>
 	<head>		
-		<title> SET08101 - Headings </title>
+		<title> Recipes For All </title>
 	</head>
 	<body>
-		<h1> A very important heading </h1>
-		<img src =" https :// raw . githubusercontent . com / siwells / set08101 / master /resources / vmask .jpg " />
+		<h1> test </h1>
 	</body>
 </html>
